--- a/src/css/App.css
+++ b/src/css/App.css
@@ -12,10 +12,18 @@
 
 header {
   margin-top: 3em;
-  width: 100vw;
+  min-width: 100vw;
   box-shadow: inset 0px 0px 3em .5em #00BFFF;
   background: rgba(66, 134, 244, .5);
   margin-bottom: 2em;
+}
+
+h1 {
+  font-size: 10em;
+  font-family: "Ceviche One";
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding-right: 17px; /* scroll offset */
 }
 
 h2 {
@@ -61,17 +69,10 @@ ul {
 }
 
 ul li {
-  display: inline;
+  display: inline-block;
   margin-left: 4vw;
   margin-right: 4vw;
   font-weight: bold;
-}
-
-h1 {
-  font-size: 10em;
-  font-family: "Ceviche One";
-  margin-top: 0px;
-  margin-bottom: 0px;
 }
 
 a {
