--- a/src/css/App.css
+++ b/src/css/App.css
@@ -13,7 +13,7 @@
 header {
   margin-top: 3em;
   min-width: 100vw;
-  max-width: 100%;
+  max-width: 100vw;
   box-shadow: inset 0px 0px 3em .5em #00BFFF;
   background: rgba(66, 134, 244, .5);
   margin-bottom: 2em;
@@ -79,4 +79,10 @@ ul li {
 a {
   text-decoration: none;
   color: white;
+}
+
+@media (max-width: 700px) {
+  h1 {
+    font-size: 5em;
+  }
 }
